--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.2, 8.3]
+        php: [8.3]
         laravel: [11.*, 12.*]
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
