--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,8 +31,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
-          composer update --prefer-dist --no-interaction
+          # 1. Adjust Orchestra Testbench dynamically according to the Laravel version
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.laravel == '12.*' && '^10.0' || '^9.0' }}" --no-interaction --no-update
+          
+          # 2. Update with -W to resolve nested dependency conflicts
+          composer update --prefer-dist --no-interaction -W
 
       - name: Execute tests
         run: vendor/bin/pest
