--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "edumicro/daisylw4",
     "description": "Agnostic UI components for Laravel, Livewire 4 and DaisyUI",
-    "keywords": ["laravel", "livewire", "volt", "daisyui", "tailwind", "autoform"],
+    "keywords": ["laravel", "livewire", "daisyui", "tailwind", "autoform"],
     "license": "MIT",
     "type": "library",
     "authors": [
@@ -13,7 +13,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/support": "^11.0|^12.0",
-        "livewire/livewire": "^4.0"
+        "livewire/livewire": "^4.1"
     },
     
     "autoload": {
@@ -39,7 +39,6 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "livewire/volt": "^1.6",
         "pestphp/pest": "^4.3",
         "pestphp/pest-plugin-laravel": "^4.0",
         "orchestra/testbench": "^10.9"
